# rlcs-manager

./: CMakeLists.txt  LICENSE  README.md  gui.c  gui.h  main.c  menu.c  menu.h  office.c  office.h  player_list.c  player_list.h  players
